remove unnecessary log in GlobalExceptionHandler